<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.potatocloud</groupId>
        <artifactId>potatocloud</artifactId>
        <version>1.3.0</version>
    </parent>

    <groupId>net.potatocloud.node</groupId>
    <artifactId>node</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.potatocloud.core</groupId>
            <artifactId>core</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.potatocloud.api</groupId>
            <artifactId>api</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.Carleslc.Simple-YAML</groupId>
            <artifactId>Simple-Yaml</artifactId>
            <version>${simpleyaml.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>snakeyaml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline</artifactId>
            <version>${jline.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>${oshi.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>${slf4j-nop.version}</version>
        </dependency>

        <dependency>
            <groupId>net.potatocloud.plugin.spigot</groupId>
            <artifactId>plugin-spigot</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.potatocloud.plugin.velocity</groupId>
            <artifactId>plugin-velocity</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>net.potatocloud.plugin.limbo</groupId>
            <artifactId>plugin-limbo</artifactId>
            <version>${project.version}</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>potatocloud-${project.version}</finalName>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>copy-plugin-jar</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>net.potatocloud.plugin.spigot</groupId>
                                    <artifactId>plugin-spigot</artifactId>
                                    <version>${project.version}</version>
                                    <outputDirectory>${project.build.outputDirectory}/default-files</outputDirectory>
                                    <destFileName>potatocloud-plugin-spigot.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>net.potatocloud.plugin.velocity</groupId>
                                    <artifactId>plugin-velocity</artifactId>
                                    <version>${project.version}</version>
                                    <outputDirectory>${project.build.outputDirectory}/default-files</outputDirectory>
                                    <destFileName>potatocloud-plugin-velocity.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>net.potatocloud.plugin.limbo</groupId>
                                    <artifactId>plugin-limbo</artifactId>
                                    <version>${project.version}</version>
                                    <outputDirectory>${project.build.outputDirectory}/default-files</outputDirectory>
                                    <destFileName>potatocloud-plugin-limbo.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>net.potatocloud.node.NodeMain</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>